--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-  <head>
+  <title>
   Personel Webpage of aszxc 
+  </title>
+  <head>
+    
   </head>
   <body>
   Bu bir test sayfasıdır.
